--- a/SDIO_stm32f103zet_Black.ioc
+++ b/SDIO_stm32f103zet_Black.ioc
@@ -2,8 +2,19 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FATFS.BSP.number=1
 FATFS.IPParameters=_MAX_SS
 FATFS._MAX_SS=4096
+FATFS0.BSP.STBoard=false
+FATFS0.BSP.api=Unknown
+FATFS0.BSP.component=
+FATFS0.BSP.condition=
+FATFS0.BSP.instance=PC1
+FATFS0.BSP.ip=GPIO
+FATFS0.BSP.mode=Input
+FATFS0.BSP.name=Detect_SDIO
+FATFS0.BSP.semaphore=
+FATFS0.BSP.solution=PC1
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F103ZET6
@@ -18,18 +29,19 @@ Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
 Mcu.Pin1=OSC_IN
-Mcu.Pin10=PD2
-Mcu.Pin11=PB5
-Mcu.Pin12=VP_FATFS_VS_SDIO
+Mcu.Pin10=PC12
+Mcu.Pin11=PD2
+Mcu.Pin12=PB5
+Mcu.Pin13=VP_FATFS_VS_SDIO
 Mcu.Pin2=OSC_OUT
-Mcu.Pin3=PC8
-Mcu.Pin4=PC9
-Mcu.Pin5=PA9
-Mcu.Pin6=PA10
-Mcu.Pin7=PC10
-Mcu.Pin8=PC11
-Mcu.Pin9=PC12
-Mcu.PinsNb=13
+Mcu.Pin3=PC1
+Mcu.Pin4=PC8
+Mcu.Pin5=PC9
+Mcu.Pin6=PA9
+Mcu.Pin7=PA10
+Mcu.Pin8=PC10
+Mcu.Pin9=PC11
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -58,6 +70,10 @@ PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=D4  LED_G2
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=Detect_SDIO
+PC1.Locked=true
+PC1.Signal=GPIO_Input
 PC10.Mode=SD_4_bits_Wide_bus
 PC10.Signal=SDIO_D2
 PC11.Mode=SD_4_bits_Wide_bus
@@ -103,7 +119,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SDIO_SD_Init-SDIO-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.ADCFreqValue=4000000
 RCC.AHBCLKDivider=RCC_SYSCLK_DIV8
 RCC.AHBFreq_Value=8000000
